# f

./: .gitignore  Cargo.toml  README.md  f.sh  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 7zmqjkji5sm04rs0lrdlcpwk9daa2ja3-source  bxgbb1va5nqb3z3r22jh3bgdiqp75279-source  fv0ilwg2bkk8rk7v2h2x164nrfg2sqfx-source  h55d73qlmnz8v0kjbv7wna5v2cl3y20v-source  hv8w9k2crb6zzyjhh1xmc8wfhjql46fn-source
.github/workflows/: build.yaml
src/: main.rs
